--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,8 @@ steps:
       az extension add --name azure-devops
       az --version
       az account show
-      az config set extension.use_dynamic_install=yes_without_prompt
+      #az config set extension.use_dynamic_install=yes_without_prompt
+      echo "Listing repositories ..."
       az repos list --org $ORGANIZATION --project $PROJECT > /tmp/gitRepo.output
 
       if [ $? -eq 0 ]
