--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,15 @@ pool:
 #  - create
   #- renew WIP
   #- revoke WIP
+resources:
+  repositories:
+  - repository: nm-factory-inf-pip-operations
+    type: github
+    name: ecl-ado-prj-iac/nm-factory-inf-pip-operations
+
 
 steps:
-- checkout: git:ecl-ado-prj-iac/nm-factory-inf-env-azdevops
+- checkout: nm-factory-inf-pip-operations
 - task: AzureCLI@2
   displayName: "Backup_gitRepos"
   inputs:
