--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ resources:
   repositories:
   - repository: nm-factory-inf-pip-operations
     type: github
+    endpoint: ecl-az-fact-svc-01-adrconnection
     name: ecl-ado-prj-iac/nm-factory-inf-pip-operations
 
 
