--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
       az account show
       #az config set extension.use_dynamic_install=yes_without_prompt
       echo "Listing repositories ..."
-      #az repos list --org $ORGANIZATION --project $PROJECT > /tmp/gitRepo.output
+      az repos list --org $ORGANIZATION --project $PROJECT > /tmp/gitRepo.output
       #echo "Listing repositories ... done"
       #if [ $? -eq 0 ]
       #then
