Try a checkout using resources/repositories

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,15 @@ pool:
 #    endpoint: ecl-az-fact-svc-01-armconnection-azure-euroctl-hub-subs
 #    name: ecl-ado-prj-iac/nm-factory-inf-pip-operations
 
+resources:
+  repositories:
+  - repository: nm-factory-inf-pip-certs
+    type: github
+    name: ecl-ado-factory/nm-factory-inf-pip-certs
 
 steps:
-- checkout: git//ecl-ado-prj-iac/nm-factory-inf-pip-certs
+- checkout: nm-factory-inf-pip-certs
+#- checkout: git//ecl-ado-prj-iac/nm-factory-inf-pip-certs
 - task: AzureCLI@2
   displayName: "Backup_gitRepos"
   inputs:
