--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ resources:
   repositories:
   - repository: nm-factory-inf-pip-certs
     type: github
+    endpoint: ecl-az-fact-svc-01-adrconnection
     name: ecl-ado-factory/nm-factory-inf-pip-certs
 
 steps:
