--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
       #fi
 
 - script: |
-    git -c http.extraheader="AUTHORIZATION: bearer $SYSTEM_ACCESSTOKEN"
-    clone --depth 1 https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-dpl-env-testing"
+    git -c http.extraheader="AUTHORIZATION: bearer $SYSTEM_ACCESSTOKEN" \
+      clone --depth 1 https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-dpl-env-testing
   env:
     SYSTEM_ACCESSTOKEN: $(System.AccessToken)
