--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,10 @@ steps:
       #fi
 
 - script: |
+    ls -lat
     git clone --mirror -c http.extraheader="AUTHORIZATION: bearer $SYSTEM_ACCESSTOKEN" https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-pip-operations
+    ls -lat
+    git clone --mirror -c http.extraheader="AUTHORIZATION: bearer $SYSTEM_ACCESSTOKEN" https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
+    ls -lat
   env:
     SYSTEM_ACCESSTOKEN: $(System.AccessToken)
