--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,11 @@ resources:
   - repository: nm-factory-inf-env-dev
     type: git
     name: ecl-ado-prj-iac/nm-factory-inf-env-dev
-    path: ./repositories/
+    path: repositories
   - repository: nm-factory-inf-env-pro
     type: git
     name: ecl-ado-prj-iac/nm-factory-inf-env-pro
-    path: ./repositories/
+    path: repositories
 
 steps:
 - checkout: nm-factory-inf-env-dev
