--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,12 +34,13 @@ steps:
 - checkout: nm-factory-inf-env-pro
 
 - script: |
-    REPO_FOLDER_NAME=`date  +%F_%Hh%Mm%Ss`
-    echo "##vso[task.setvariable variable=REPO_FOLDER_NAME]${REPO_FOLDER_NAME}"
+    LOCAL_FOLDER_NAME=`date  +%F_%Hh%Mm%Ss`
+    BACKUP_FILE=${LOCAL_FOLDER_NAME}.tgz
+    echo "##vso[task.setvariable variable=BACKUP_FILE]${BACKUP_FILE}"
     ls -lat
-    mkdir ./${REPO_FOLDER_NAME}
-    mv ./nm-factory-* ./${REPO_FOLDER_NAME}
-    tar -cvzf ${REPO_FOLDER_NAME}.tgz ./${REPO_FOLDER_NAME}
+    mkdir ./${LOCAL_FOLDER_NAME}
+    mv ./nm-factory-* ./${LOCAL_FOLDER_NAME}
+    tar -cvzf ${BACKUP_FILE} ./${LOCAL_FOLDER_NAME}
 
 
 - task: AzureCLI@2
@@ -51,7 +52,8 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       #!/bin/bash
-      echo "REPO_FOLDER_NAME = ${REPO_FOLDER_NAME}"
+      echo "BACKUP_FILE = ${BACKUP_FILE}"
+      CONTAINER_FOLDER = azureGitRepos
       ORGANIZATION=https://dev.azure.com/ecl-ado-factory/
       PROJECT=ecl-ado-prj-iac
 
@@ -64,13 +66,15 @@ steps:
       ls -lat
 
       #to be removed
-      az extension add --name azure-devops
-      az --version
-      az account show
-      az storage blob list \
+      #az extension add --name azure-devops
+      #az --version
+      #az account show
+      az storage blob upload \
         --account-name ${ACCOUNT_NAME} \
         --account-key ${ACCOUNT_KEY} \
-        --container-name ${CONTAINER_NAME} 
+        --container-name ${CONTAINER_NAME} \
+        --file ${BACKUP_FILE} \
+        --name ${CONTAINER_FOLDER}/${BACKUP_FILE}
 
 
       #az config set extension.use_dynamic_install=yes_without_prompt
