--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
 - script: |
     LOCAL_FOLDER_NAME=`date +%Y%m%d%H%M%S`
     BACKUP_FILE="azureGitRepos-${LOCAL_FOLDER_NAME}.tgz"
-    REPO_PREFIX="./nm-factory-*""
+    REPO_PREFIX="./nm-factory-*"
     echo "##vso[task.setvariable variable=BACKUP_FILE]${BACKUP_FILE}"
     ls -lat
     mkdir ./${LOCAL_FOLDER_NAME}
