--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,16 +18,10 @@ pool:
   #- revoke WIP
 variables:
    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
-resources:
-  repositories:
-  - repository: nm-factory-inf-env-dev
-    type: git
-    name: ecl-ado-prj-iac/nm-factory-inf-env-dev
-    path: repositories
-  - repository: nm-factory-inf-env-pro
-    type: git
-    name: ecl-ado-prj-iac/nm-factory-inf-env-pro
-    path: repositories
+
+extends:
+  template: resource-template.yml
+
 
 steps:
 - checkout: nm-factory-inf-env-dev
