--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,16 @@ pool:
   #- revoke WIP
 
 
-extends:
-  template: resource-template.yml
+resources:
+  repositories:
+  - repository: nm-factory-inf-env-dev
+    type: git
+    name: ecl-ado-prj-iac/nm-factory-inf-env-dev
+    path: repositories
+  - repository: nm-factory-inf-env-pro
+    type: git
+    name: ecl-ado-prj-iac/nm-factory-inf-env-pro
+    path: repositories
 
 jobs:
 - job:
