Add main branch for backup

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,9 @@ pool:
 schedules:
 - cron: "*/5 * * * *"
   displayName: Nightly backup
+  branches:
+    include:
+    - main
   always: true
 
 #parameters:
