--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,10 +40,11 @@ resources:
 
 jobs:
 - job:
+  variables:
+  - RETENTION: "-14 hours" #"-1 days" or "-1 weeks" or "-1 month"
   steps:
   - checkout: nm-factory-inf-env-dev
   - checkout: nm-factory-inf-env-pro
-
   - script: |
       LOCAL_FOLDER_NAME=`date +%Y%m%d%H%M%S`
       BACKUP_FILE="azureGitRepos-${LOCAL_FOLDER_NAME}.tgz"
@@ -73,9 +74,6 @@ jobs:
         ACCOUNT_KEY=$(az storage account keys list --account-name ${ACCOUNT_NAME} --query="[0].value")
         az storage account keys list --account-name ${ACCOUNT_NAME} --query="[0].value"
       
-        echo "List local backup:"
-        ls -lat
-
         echo "Current Azure account:"
         az account show
         echo "Upload backup file"
@@ -85,4 +83,27 @@ jobs:
           --container-name ${CONTAINER_NAME} \
           --file ${BACKUP_FILE} \
           --name ${CONTAINER_FOLDER}/${BACKUP_FILE}
+  - task: AzureCLI@2
+    displayName: "Backup retention"
+    inputs:
+      azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+      scriptType: 'bash'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
 
+        RETENTION="-14 hours" #"-1 days" or "-1 weeks" or "-1 month"
+
+        thresholdDate=`date -d "${RETENTION}" +%Y%m%d%H%M%S`
+
+        az storage blob list --account-name ${ACCOUNT_NAME} --account-key ${ACCOUNT_KEY} --container-name ${CONTAINER_NAME} --prefix ${CONTAINER_FOLDER}/ | jq .[].name | tr -d "\"" > /tmp/backups.list
+
+        while read line; 
+        do 
+            fileDate=`basename $line | sed  's/azureGitRepos-//g' | sed 's/.tgz//'`
+            echo "Comparison $fileDate -lt $thresholdDate"
+            if [ "$fileDate" -lt "$thresholdDate" ]
+            then
+                echo "Backup cleaning: Removing object $line"
+                az storage blob delete --account-name ${ACCOUNT_NAME} --account-key ${ACCOUNT_KEY} --container-name ${CONTAINER_NAME} --name ${line}
+            fi
+        done < /tmp/backups.list
