Variable in lowcaes

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ resources:
 jobs:
 - job:
   variables:
-  - RETENTION: "-14 hours" #"-1 days" or "-1 weeks" or "-1 month"
+  - retention: "-14 hours" #"-1 days" or "-1 weeks" or "-1 month"
   steps:
   - checkout: nm-factory-inf-env-dev
   - checkout: nm-factory-inf-env-pro
