Come back to static repositories

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,5 @@
 name: nm-factory-inf-pip-operation
 
-parameters: 
-- name: repositories
-  type: object
-  default: 
-  - nm-factory-inf-env-dev
-  - nm-factory-inf-env-pro
-
 pool:
   name: Factory-VSS-Agents
 
@@ -36,11 +29,14 @@ schedules:
 
 resources:
   repositories:
-  - ${{each repo in parameters.repositories}}:
-    - repository: ${{ repo }}
-      type: git
-      name: ecl-ado-prj-iac/${{ repo }}
-      path: repositories
+  - repository: nm-factory-inf-env-dev
+    type: git
+    name: ecl-ado-prj-iac/nm-factory-inf-env-dev
+    path: repositories
+  - repository: nm-factory-inf-env-pro
+    type: git
+    name: ecl-ado-prj-iac/nm-factory-inf-env-pro
+    path: repositories
 
 jobs:
 - job:
