--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ jobs:
       
         echo "Current Azure account:"
         az account show
-
+        az extension add -n azure-devops
         az repos list --organization ${ORGANIZATION} --project ecl-ado-prj-iac
 
 
