--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,10 +79,11 @@ jobs:
       az repos list --organization ${ORGANIZATION} --project ecl-ado-prj-iac | jq .[].remoteUrl > /tmp/repoUrls.list
 
       while read repoUrl; 
-      do 
-        echo "Cloning $repoUrl"
-        git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror $repoUrl
-      done < /tmp/repoUrls.list
+      #do 
+      #  echo "Cloning $repoUrl"
+      #  git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror $repoUrl
+      #done < /tmp/repoUrls.list
+      git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
       ls -lat
 
 
