--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,7 +85,7 @@ jobs:
       #done < /tmp/repoUrls.list
       git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev nm-factory-inf-env-dev
       ls -lat 
-      ls -lat ./m-factory-inf-env-dev
+      ls -lat ./nm-factory-inf-env-dev
 
 
   - script: |
